--- a/conv-mlp-init-test.ipynb
+++ b/conv-mlp-init-test.ipynb
@@ -832,6 +832,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conv_t2(inputs, filters):\n",
+    "    outputs = tf.layers.conv2d_transpose(\n",
+    "        inputs=inputs,\n",
+    "        filters=filters,\n",
+    "        kernel_size=5,\n",
+    "        strides=2, #(1, 1),\n",
+    "        padding='same', #not 'valid'\n",
+    "        data_format='channels_last', #'NHWC'\n",
+    "        activation=None,\n",
+    "        use_bias=True,\n",
+    "        kernel_initializer=init_xavier(),\n",
+    "        bias_initializer=tf.zeros_initializer(),\n",
+    "        kernel_regularizer=None,\n",
+    "        bias_regularizer=None,\n",
+    "        activity_regularizer=None,\n",
+    "        kernel_constraint=None,\n",
+    "        bias_constraint=None,\n",
+    "        trainable=True,\n",
+    "        name=None,\n",
+    "        reuse=None)\n",
+    "    return outputs    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'Conv2d_transpose_6/BiasAdd:0' shape=(?, 2, 2, 12) dtype=float32>"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'conv2d_transpose_10/BiasAdd:0' shape=(?, 4, 4, 6) dtype=float32>"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv_t2(h, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
