GAE-DAQL is implemented, debugged and being tested.

--- a/conv-mlp-init-test.ipynb
+++ b/conv-mlp-init-test.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,16 +696,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'batch_normalization/FusedBatchNorm:0' shape=(?, 64, 64, 3) dtype=float32>"
+       "<tf.Tensor 'x_1:0' shape=(?, 64, 64, 3) dtype=float32>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'batch_normalization_1/FusedBatchNorm:0' shape=(?, 64, 64, 3) dtype=float32>"
+      ]
+     },
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
