DAQL is tested as Advencoder.

--- a/DAQL-tgt.ipynb
+++ b/DAQL-tgt.ipynb
@@ -1158,32 +1158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/1111... Dloss: -32.2349 Gloss: 13.7308\n",
-      "Epoch 1/1111... Dloss: -48.9329 Gloss: 24.8020\n",
-      "Epoch 1/1111... Dloss: -59.3680 Gloss: 31.9097\n",
-      "Epoch 1/1111... Dloss: -67.4194 Gloss: 35.8777\n",
-      "Epoch 1/1111... Dloss: -74.3140 Gloss: 42.5479\n",
-      "Epoch 1/1111... Dloss: -80.8204 Gloss: 48.0319\n",
-      "Epoch 1/1111... Dloss: -86.7639 Gloss: 51.0464\n",
-      "Epoch 1/1111... Dloss: -92.7437 Gloss: 59.1364\n",
-      "Epoch 1/1111... Dloss: -98.6334 Gloss: 63.1194\n",
-      "Epoch 1/1111... Dloss: -104.4148 Gloss: 70.0722\n",
-      "Epoch 1/1111... Dloss: -109.9457 Gloss: 75.0793\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "losses, samples = train(net=net, dataset=dataset, epochs=epochs, batch_size=batch_size, graph=graph) \n",
-    "# # # figsize=(15,10) # W:15, H:10"
+    "# losses, samples = train(net=net, dataset=dataset, epochs=epochs, batch_size=batch_size, graph=graph) \n",
+    "# # # # figsize=(15,10) # W:15, H:10"
    ]
   },
   {
